--- a/clook/clock.css
+++ b/clook/clock.css
@@ -5,21 +5,37 @@
 }
 
 .home {
-  background-color: black;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  color: white;
 
   .clockApp {
-    background-color: aqua;
+    background-color:black;
     width: 500px;
     height: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     gap: 1rem;
+    border-radius: 30px;
+    padding-top: 2rem;
+    >h2{
+      font-size: 2.5rem;
+    }
+    >label{
+      width: 30px;
+      height: 30px;
+      background-color: aqua;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 30px;
+      cursor: pointer;
+    }
     > input {
       padding: 1rem;
       width: 300px;
