--- a/clook/clock.css
+++ b/clook/clock.css
@@ -12,6 +12,7 @@
   color: white;
 
   .clockApp {
+    position: relative;
     background-color:black;
     width: 500px;
     height: 600px;
@@ -26,14 +27,15 @@
       font-size: 2.5rem;
     }
     >label{
-      width: 30px;
-      height: 30px;
+      width: 35px;
+      height: 35px;
       background-color: aqua;
       border-radius: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
       font-size: 30px;
+      font-weight: bold;
       cursor: pointer;
     }
     > input {
@@ -43,14 +45,43 @@
       border-radius: 10px;
       outline: none;
       border: 1px solid grey;
+      display: none;
     }
     > button {
-      width: 100px;
+
+      font-size: 1.2rem;
+      
       height: 30px;
       border-radius: 20px;
       outline: none;
       border: 1px solid grey;
       cursor: pointer;
+      text-align: center;
+      padding: 0 20%;
+      position: absolute;
+      bottom: 30px;
     }
+    >button:hover{
+      background-color: aqua;
+      color:white;
+    }
+    >ul{
+      padding-top: 3rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: start;
+      align-items: center;
+      margin-top: 1rem;
+      /* background-color: red; */
+      width: 80%;
+      height: 250px;
+      overflow: scroll;
+      
+      >li{
+        list-style-type: none;
+        font-size: 1.8rem;
+      }
+    }
+
   }
 }
