--- a/clook/clock.css
+++ b/clook/clock.css
@@ -39,13 +39,16 @@
       cursor: pointer;
     }
     > input {
-      padding: 1rem;
-      width: 300px;
-      height: 30px;
+      /* padding: 1rem; */
+      width: 0px;
+      height: 0px;
       border-radius: 10px;
       outline: none;
       border: 1px solid grey;
-      display: none;
+      opacity: 0;
+      overflow: hidden;
+
+     
     }
     > button {
 
