--- a/clook/clock.css
+++ b/clook/clock.css
@@ -6,7 +6,9 @@
 
 .home {
   height: 100vh;
+  width: 100%;
   display: flex;
+  /* flex-direction: column; */
   justify-content: center;
   align-items: center;
   color: white;
@@ -39,15 +41,13 @@
       cursor: pointer;
     }
     > input {
-      /* padding: 1rem; */
-      width: 0px;
-      height: 0px;
+      padding: 1rem;
+      width: 300px;
+      height: 30px;
       border-radius: 10px;
       outline: none;
       border: 1px solid grey;
-      opacity: 0;
-      overflow: hidden;
-
+      display: none;
      
     }
     > button {
