--- a/clook/clock.css
+++ b/clook/clock.css
@@ -40,14 +40,14 @@
       font-weight: bold;
       cursor: pointer;
     }
-    > input {
-      padding: 1rem;
-      width: 300px;
-      height: 30px;
+   > input {
+      /* padding: 1rem; */
+      width: 0px;
+      height: 0px;
       border-radius: 10px;
       outline: none;
       border: 1px solid grey;
-      display: none;
+      opacity: 0;
      
     }
     > button {
