--- a/clook/clock.css
+++ b/clook/clock.css
@@ -40,7 +40,17 @@
       font-weight: bold;
       cursor: pointer;
     }
-   > input {
+    /* > input {
+      padding: 1rem;
+      width: 300px;
+      height: 30px;
+      border-radius: 10px;
+      outline: none;
+      border: 1px solid grey;
+      
+     
+    } */
+    > input {
       /* padding: 1rem; */
       width: 0px;
       height: 0px;
