--- a/clook/clock.css
+++ b/clook/clock.css
@@ -60,6 +60,16 @@
       opacity: 0;
      
     }
+    > #textValue {
+      padding: 1rem;
+      width: 300px;
+      height: 30px;
+      border-radius: 10px;
+      outline: none;
+      border: 1px solid grey;
+      
+     
+    }
     > button {
 
       font-size: 1.2rem;
